testsuite/poke.pkl/ass-diag-1.pk
/* { dg-do compile } */

"abc"[1] = 2UB;  /* { dg-error "" } */
